--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "kasir",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "NODE_ENV=test nyc --reporter=html --reporter=text mocha --timeout 20000 --recursive src/tests",
     "start": "node server.js"
   },
   "author": "danangkonang",
