--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bayar-backend",
+  "name": "service-express-typescript",
   "version": "1.0.0",
   "description": "kasir",
   "main": "index.js",
@@ -10,23 +10,7 @@
   "author": "danangkonang",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^3.0.6",
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "express-jwt": "^5.3.1",
-    "jsonwebtoken": "^8.5.1",
-    "mysql": "^2.17.1",
-    "mysql2": "^2.0.0",
-    "pg": "^7.12.1",
-    "sequelize": "^5.21.1",
-    "sequelize-cli": "^5.5.1"
+    "express": "^4.17.1"
   },
-  "devDependencies": {
-    "eslint": "^7.24.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "prettier": "^2.2.1"
-  }
+  "devDependencies": {}
 }
