--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   "description": "service user auth express typescripts",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "tsc": "rm -rf build/ && tsc",
+    "ts": "rm -rf build/ && tsc -w",
+    "dev": "nodemon app.ts"
   },
   "author": "danangkonang",
   "license": "ISC",
@@ -16,7 +19,11 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.9.2",
     "nodemon": "^2.0.12",
+    "ts-node": "^10.2.1",
+    "tslint": "^6.1.3",
     "typescript": "^4.4.3"
   }
 }
